# lazynotes

./: pyproject.toml  requirements.txt
docs/: ARCHITECTURE_AND_ENGINEERING.md  KEYBINDINGS.md  PROGRESS.md  REQUIREMENTS_AND_USER_STORIES.md
lazynotes/: app.py  config.py
lazynotes/models/: note.py
lazynotes/ui/components/: editor.py  explorer.py  search_bar.py  status_bar.py  viewer.py
lazynotes/ui/modals/: color_picker.py  help.py  new_note.py
lazynotes/utils/: file_manager.py  search_engine.py  trash_manager.py
legacy/: codigo1.py  codigo2.py
notes/Archive/: old-archived-note.md
notes/Personal/: idea-lazyvim-tui-notes-app.md  journal-2026-07-14.md  project-ideas.md
notes/Work/: weekly-meeting.md
