[project]
name = "lazynotes"
version = "0.1.0"
description = "TUI de notas Markdown local, inspirada en LazyVim y LazyGit"
requires-python = ">=3.10"
dependencies = [
    "textual==8.2.8",
    "rich==15.0.0",
    "python-frontmatter==1.3.0",
    "rapidfuzz==3.14.5",
]

[project.scripts]
lazynotes = "lazynotes.app:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lazynotes*"]
